--- a/styles/variables/variables.scss
+++ b/styles/variables/variables.scss
@@ -1,3 +1,12 @@
 $white: #fff;
 $pink: #F05454;
 $blue: #0d335d;
+
+
+
+.backgroundImage {
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin-right: 1.5rem;
+  cursor: pointer;
+}
