--- a/components/Header/header.module.scss
+++ b/components/Header/header.module.scss
@@ -8,8 +8,12 @@
   height: 100%;
   top: 0;
   left: 0;
-  overflow: hidden;
   background-color: black;
+  z-index: 1;
+  overflow: hidden;
+  -webkit-box-shadow: 0px 13px 12px -8px rgba(34, 60, 80, 0.19);
+  -moz-box-shadow: 0px 13px 12px -8px rgba(34, 60, 80, 0.19);
+  box-shadow: 0px 13px 12px -8px rgba(34, 60, 80, 0.19);
 
   &__left {
     height: 100%;
@@ -29,12 +33,12 @@
     width: 100%;
     background-color: $pink;
     &__bg {
-      top: 25%;
-      margin-left: -8rem;
-      position: absolute;
+      position: fixed;
       font-weight: 800;
       font-size: 300px;
       color: white;
+      bottom: 0;
+      top: 0;
       -moz-transform: rotate(-90deg);
       -ms-transform: rotate(-90deg);
       -webkit-transform: rotate(-90deg);
@@ -79,9 +83,18 @@
       margin-left: -15%;
       margin-top: 5%;
       z-index: 3;
+      transform: rotate(-360deg);
+      animation: pizzaRotate 2.5s alternate ease-in-out;
     }
   }
 }
+
+
+@keyframes pizzaRotate {
+  0% {transform: rotate(90deg)}
+  100% {transform: rotate(-360deg)}
+}
+
 
 @media only screen and (max-width: 414px) {
   .header {
