--- a/components/NavLayout/navlayout.module.scss
+++ b/components/NavLayout/navlayout.module.scss
@@ -35,7 +35,7 @@
 }
 
 .modalCenter {
-  position: absolute;
+  position: relative;
   width: 98%;
   height: 100%;
   display: flex;
@@ -44,7 +44,7 @@
 
 .modal {
   position: absolute;
-  z-index: 10;
+  z-index: 8;
   width: 23rem;
   background-color: white;
   text-align: center;
