Few features in admin

--- a/styles/variables/variables.scss
+++ b/styles/variables/variables.scss
@@ -10,3 +10,12 @@ $blue: #0d335d;
   margin-right: 1.5rem;
   cursor: pointer;
 }
+
+
+.fullPage {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+}
