--- a/components/Header/header.module.scss
+++ b/components/Header/header.module.scss
@@ -18,7 +18,7 @@
   &__left {
     height: 100%;
     background-color: $white;
-
+    z-index: 2;
     &__content {
       height: 100%;
       position: absolute;
@@ -48,6 +48,7 @@
   }
 
   &__moto {
+    z-index: 4;
     font-size: 50px;
     max-width: 25rem;
     font-weight: 800;
@@ -99,6 +100,7 @@
 @media only screen and (max-width: 414px) {
   .header {
     &__left {
+      z-index: 4;
       &__content {
         margin-left: 1rem;
         z-index: 2;
