Added post request that creates new pizza from pizza form.

--- a/components/admin/AdminSearcher/adminSearch.module.scss
+++ b/components/admin/AdminSearcher/adminSearch.module.scss
@@ -2,8 +2,8 @@
 
 .adminSearch {
     position: absolute;
-    height: 4rem;
-    width: 40%;
+    height: 4.25rem;
+    width: 43rem;
     left: 50%;
     top: 30%;
     transform: translate(-50%, 30%);
@@ -19,7 +19,7 @@
 
         &__submit {
             cursor: pointer;
-            margin-top: .5rem;
+            margin-top: .7rem;
             border-radius: 10px;
             height: 3rem;
             width: 5rem;
