--- a/styles/fonts/fonts.scss
+++ b/styles/fonts/fonts.scss
@@ -1,12 +1,12 @@
 @font-face {
-  font-family: "Poppins";
+  font-family: "Roboto";
   font-weight: 500;
   src:  url("../../public/fonts/Roboto/Roboto-Regular.ttf") format('opentype');
   font-display: swap;
 }
 
 @font-face {
-  font-family: "Poppins";
+  font-family: "Roboto";
   font-weight: 700;
   src:  url("../../public/fonts/Roboto/Roboto-Medium.ttf") format('opentype');
   font-display: swap;
@@ -14,7 +14,7 @@
 
 
 @font-face {
-  font-family: "Poppins";
+  font-family: "Roboto";
   font-weight: 800;
   src:  url("../../public/fonts/Roboto/Roboto-Bold.ttf") format('opentype');
   font-display: swap;
