--- a/styles/adminNewPizza.module.scss
+++ b/styles/adminNewPizza.module.scss
@@ -4,6 +4,27 @@
 .newPizza {
   display: flex;
   flex-direction: row;
+  margin-left: 3%;
+  margin-top: 7rem;
+  margin-bottom: 3%;
+}
+
+.decoration {
+  position: absolute;
+  right: 0;
+  top: -50%;
+  width: 50%;
+  height: 100%;
+  background-color: $pink;
+  transform: skewX(50deg);
+}
+
+.header {
+  position: absolute;
+  left: 50%;
+  top: 1rem;
+  transform: translateX(-50%);
+  font-size: 50px;
 }
 
 .form {
