display user fields

--- a/styles/pizza.module.scss
+++ b/styles/pizza.module.scss
@@ -65,12 +65,12 @@
           &__image {
             height: 1.77rem;
             width: 1.5rem;
-            background-image: url('../images/pngwing.com-2.png');
+            background-image: url('../images/delete.png');
           }
 
           &__imageEdit {
             width: 1.8rem;
-            background-image: url('../images/pngfind.com-phone-symbol-png-2755033.png');
+            background-image: url('../images/edit.png');
           }
         }
       }
