--- a/styles/pizza.module.scss
+++ b/styles/pizza.module.scss
@@ -147,11 +147,7 @@
 
 
 .pizzaPageInput {
-  font-size: 20px;
-  width: 4rem;
-  background-color: rgba(gray, .1);
-  border-radius: 3px;
-  padding: .2rem;
+  @extend %basicInput
 }
 
 @media screen and (max-width: 400px) {
