--- a/components/Header/header.module.scss
+++ b/components/Header/header.module.scss
@@ -1,145 +1,146 @@
-@import '../../styles/variables/variables';
+@import "../../styles/variables/variables";
 
 .header {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background-color: black;
-  z-index: 1;
-  overflow: hidden;
-  -webkit-box-shadow: 0px 13px 12px -8px rgba(34, 60, 80, 0.19);
-  -moz-box-shadow: 0px 13px 12px -8px rgba(34, 60, 80, 0.19);
-  box-shadow: 0px 13px 12px -8px rgba(34, 60, 80, 0.19);
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background-color: black;
+	z-index: 1;
+	overflow: hidden;
 
-  &__left {
-    height: 100%;
-    background-color: $white;
-    z-index: 2;
-    &__content {
-      height: 100%;
-      position: absolute;
-      transform: translateY(30%);
-      margin-left: 3rem;
-      z-index: 4;
-    }
-  }
+	-webkit-box-shadow: 0px 13px 12px -8px rgba(34, 60, 80, 0.19);
+	-moz-box-shadow: 0px 13px 12px -8px rgba(34, 60, 80, 0.19);
+	box-shadow: 0px 13px 12px -8px rgba(34, 60, 80, 0.19);
 
-  &__right {
-    height: 100%;
-    width: 100%;
-    background-color: $pink;
-    &__bg {
-      position: fixed;
-      font-weight: 800;
-      font-size: 300px;
-      color: white;
-      bottom: 0;
-      top: 0;
-      -moz-transform: rotate(-90deg);
-      -ms-transform: rotate(-90deg);
-      -webkit-transform: rotate(-90deg);
-      -o-transform: rotate(-90deg);
-      transform: rotate(-90deg);
-    }
-  }
+	&__left {
+		height: 100%;
+		background-color: $white;
+		z-index: 2;
+		&__content {
+			height: 100%;
+			position: absolute;
+			transform: translateY(30%);
+			margin-left: 3rem;
+			z-index: 4;
+		}
+	}
 
-  &__moto {
-    z-index: 4;
-    font-size: 50px;
-    max-width: 25rem;
-    font-weight: 800;
-    color: $blue;
-  }
+	&__right {
+		height: 100%;
+		width: 100%;
+		background-color: $pink;
+		&__bg {
+			position: fixed;
+			font-weight: 800;
+			font-size: 300px;
+			color: white;
+			bottom: 0;
+			top: 0;
+			-moz-transform: rotate(-90deg);
+			-ms-transform: rotate(-90deg);
+			-webkit-transform: rotate(-90deg);
+			-o-transform: rotate(-90deg);
+			transform: rotate(-90deg);
+		}
+	}
 
-  &__menu {
-    transition: .4s;
-    cursor: pointer;
-    text-decoration: none;
-    color: $white;
-    background-color: $pink;
-    border: 0;
-    width: 7rem;
-    height: 2.5rem;
-    border-radius: 10px;
-    font-size: 25px;
-    margin-top: 1rem;
-    &:hover {
-      -webkit-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.36);
-      box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.36);
-    }
-  }
+	&__moto {
+		z-index: 4;
+		font-size: 50px;
+		max-width: 25rem;
+		font-weight: 800;
+		color: $blue;
+	}
 
-  &__pizza {
-    &__img {
-      position: absolute;
-      background-image: url('../../images/pizza.png');
-      background-repeat: no-repeat;
-      background-size: cover;
-      width: 35rem;
-      height: 35rem;
-      margin-left: -15%;
-      margin-top: 5%;
-      z-index: 3;
-      transform: rotate(-360deg);
-      animation: pizzaRotate 2.5s alternate ease-in-out;
-    }
-  }
+	&__menu {
+		transition: 0.4s;
+		cursor: pointer;
+		text-decoration: none;
+		color: $white;
+		background-color: $pink;
+		border: 0;
+		width: 7rem;
+		height: 2.5rem;
+		border-radius: 10px;
+		font-size: 25px;
+		margin-top: 1rem;
+		&:hover {
+			-webkit-box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.36);
+			box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.36);
+		}
+	}
+
+	&__pizza {
+		&__img {
+			position: absolute;
+			background-image: url("../../images/pizza.png");
+			background-repeat: no-repeat;
+			background-size: cover;
+			width: 35rem;
+			height: 35rem;
+			margin-left: -15%;
+			margin-top: 5%;
+			z-index: 3;
+			transform: rotate(-360deg);
+			animation: pizzaRotate 2.5s alternate ease-in-out;
+		}
+	}
 }
-
 
 @keyframes pizzaRotate {
-  0% {transform: rotate(90deg)}
-  100% {transform: rotate(-360deg)}
+	0% {
+		transform: rotate(90deg);
+	}
+	100% {
+		transform: rotate(-360deg);
+	}
 }
-
 
 @media only screen and (max-width: 414px) {
-  .header {
-    &__left {
-      z-index: 4;
-      &__content {
-        margin-left: 1rem;
-        z-index: 2;
-      }
-    }
+	.header {
+		&__left {
+			z-index: 4;
+			&__content {
+				margin-left: 1rem;
+				z-index: 2;
+			}
+		}
 
-    &__pizza {
-      &__img {
-        z-index: 1;
-        margin-left: -5%;
-        margin-top: 5rem;
-        width: 23rem;
-        height: 23rem;
-      }
-    }
+		&__pizza {
+			&__img {
+				z-index: 1;
+				margin-left: -5%;
+				margin-top: 5rem;
+				width: 23rem;
+				height: 23rem;
+			}
+		}
 
-
-    &__moto {
-      font-size: 30px;
-      max-width: 15rem;
-    }
-  }
+		&__moto {
+			font-size: 30px;
+			max-width: 15rem;
+		}
+	}
 }
 
-
 @media only screen and (min-width: 1920px) {
-  .header {
-    &__pizza {
-      &__img {
-        width: 50rem;
-        height: 50rem;
-        margin-left: -10%;
-      }
-    }
+	.header {
+		&__pizza {
+			&__img {
+				width: 50rem;
+				height: 50rem;
+				margin-left: -10%;
+			}
+		}
 
-    &__right {
-      &__bg {
-        font-size: 500px;
-      }
-    }
-  }
+		&__right {
+			&__bg {
+				font-size: 500px;
+			}
+		}
+	}
 }
